# nabu

./: .asciidoctorconfig  .gitignore  LICENSE  README.adoc  README.md
.asciidoctor/: boot-slate.css  custom.css
app/: services.yml
app/client/: template.html
app/rust/: Cargo.toml  Dockerfile  packages.yml
app/rust/api1/: Cargo.toml
app/rust/api1/src/: main.rs
app/rust/api2/: Cargo.toml
app/rust/api2/src/: main.rs
app/rust/core/: Cargo.toml
app/rust/core/src/: server.rs
app/rust/nabu_api1/: Cargo.toml
app/rust/nabu_api1/src/: main.rs
app/rust/nabu_api2/: Cargo.toml
app/rust/nabu_api2/src/: main.rs
app/rust/nabu_core/: Cargo.toml
app/rust/nabu_core/src/: lib.rs  server.rs
app/rust/nabu_worker1/: Cargo.toml
app/rust/nabu_worker1/src/: main.rs
app/rust/nabu_worker2/: Cargo.toml
app/rust/worker1/: Cargo.toml
app/rust/worker2/: Cargo.toml
app/rust/worker2/src/: main.rs
config/: functions.sh  load.sh  variables.sh
deploy/: README.adoc
deploy/bootstrap/state/: README.adoc
deploy/bootstrap/state/aws/: README.adoc  local.sh  state.sh  state.yaml
deploy/bootstrap/state/azure/: README.adoc  local.sh  state.bicep  state.resources.bicep  state.sh
deploy/bootstrap/workspace/: README.adoc
deploy/bootstrap/workspace/aws/: README.adoc  local.sh  workspace.sh  workspace.yaml
deploy/bootstrap/workspace/azure/: README.adoc  local.sh  workspace.bicep  workspace.resources.bicep  workspace.sh
deploy/bootstrap/workspace/do/: README.adoc  local.sh  workspace.sh
deploy/certificates/letsencrypt/: .terraform.lock.hcl  README.adoc  backend.tf  local.sh  main.tf  outputs.tf  providers.tf  variables.tf
deploy/traditional/aws/: .terraform.lock.hcl  README.adoc  credentials.adoc  local.sh  main.tf  outputs.tf  providers.tf  variables.tf
deploy/traditional/azure/: .terraform.lock.hcl  backend.tf  credentials.adoc  local.sh  main.tf  outputs.tf  providers.tf  variables.tf
deploy/traditional/do/: .terraform.lock.hcl  README.adoc  credentials.adoc  local.sh  main.tf  outputs.tf  providers.tf  variables.tf
deploy/traditional/provision/: README.adoc  public-bootstrap.yml  public-deploy.yml  test.yaml
deploy/traditional/provision/group_vars/: all.yml
deploy/traditional/qemu/: .terraform.lock.hcl  README.adoc  backend.tf  local.sh  main.tf  outputs.tf  providers.tf  variables.tf
deploy/traditional/qemu/handlers/: file-line-entry-create.sh  file-line-entry-create.yml  file-line-entry-delete.sh  (+13 more)
(+48 files in other folders)
