[package]
name = "nabu_core"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
serde = { version = "*", features = ["derive"] }
nix = { version = "*", features = ["fs", "process", "term"] }
libc = "*"
tracing = { version = "*", features = ["max_level_trace", "release_max_level_trace"] }
tokio = { version = "*", features = ["full", "rt-multi-thread"] }
axum = {  version = "*", features = ["tokio", "http1", "http2"] }
futures = "*"
